<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TIM">

    <ImageView
        android:id="@+id/arema"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:layout_marginBottom="34dp"
        android:contentDescription="@string/arema"
        app:layout_constraintBottom_toTopOf="@+id/bhayangkara"
        app:layout_constraintEnd_toStartOf="@+id/bali"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arema"
        android:onClick="arema"/>

    <ImageView
        android:id="@+id/bali"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginBottom="34dp"
        android:contentDescription="@string/bali"
        app:layout_constraintBottom_toTopOf="@+id/borneo"
        app:layout_constraintEnd_toStartOf="@+id/barito"
        app:layout_constraintStart_toEndOf="@+id/arema"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bali"
        android:onClick="bali"/>

    <ImageView
        android:id="@+id/barito"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="34dp"
        android:contentDescription="@string/barito"
        app:layout_constraintBottom_toTopOf="@+id/kalteng"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bali"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/barito"
        android:onClick="barito"/>

    <ImageView
        android:id="@+id/bhayangkara"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:layout_marginBottom="35dp"
        android:contentDescription="@string/bhayangkara"
        app:layout_constraintBottom_toTopOf="@+id/madura"
        app:layout_constraintEnd_toStartOf="@+id/borneo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arema"
        app:srcCompat="@drawable/bhayangkara"
        android:onClick="bhayangkara"/>

    <ImageView
        android:id="@+id/borneo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginBottom="35dp"
        android:contentDescription="@string/borneo"
        app:layout_constraintBottom_toTopOf="@+id/persebaya"
        app:layout_constraintEnd_toStartOf="@+id/kalteng"
        app:layout_constraintStart_toEndOf="@+id/bhayangkara"
        app:layout_constraintTop_toBottomOf="@+id/bali"
        app:srcCompat="@drawable/borneo"
        android:onClick="borneo"/>

    <ImageView
        android:id="@+id/kalteng"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="35dp"
        android:contentDescription="@string/kalteng"
        app:layout_constraintBottom_toTopOf="@+id/persela"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/borneo"
        app:layout_constraintTop_toBottomOf="@+id/barito"
        app:srcCompat="@drawable/kalteng"
        android:onClick="kalteng"/>

    <ImageView
        android:id="@+id/madura"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:layout_marginBottom="39dp"
        android:contentDescription="@string/madura"
        app:layout_constraintBottom_toTopOf="@+id/perseru"
        app:layout_constraintEnd_toStartOf="@+id/persebaya"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bhayangkara"
        app:srcCompat="@drawable/madura"
        android:onClick="madura"/>

    <ImageView
        android:id="@+id/persebaya"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginBottom="39dp"
        app:layout_constraintBottom_toTopOf="@+id/persib"
        app:layout_constraintEnd_toStartOf="@+id/persela"
        app:layout_constraintStart_toEndOf="@+id/madura"
        app:layout_constraintTop_toBottomOf="@+id/borneo"
        app:srcCompat="@drawable/persebaya"
        android:contentDescription="@string/persebaya"
        tools:ignore="ContentDescription"
        android:onClick="persebaya"/>

    <ImageView
        android:id="@+id/persela"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="39dp"
        app:layout_constraintBottom_toTopOf="@+id/persija"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/persebaya"
        app:layout_constraintTop_toBottomOf="@+id/kalteng"
        app:srcCompat="@drawable/persela"
        android:contentDescription="@string/persela"
        android:onClick="persela"/>

    <ImageView
        android:id="@+id/perseru"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:layout_marginBottom="35dp"
        android:contentDescription="@string/perseru"
        app:layout_constraintBottom_toTopOf="@+id/persipura"
        app:layout_constraintEnd_toStartOf="@+id/persib"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/madura"
        app:srcCompat="@drawable/perseru"
        android:onClick="perseru"/>

    <ImageView
        android:id="@+id/persib"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toTopOf="@+id/psis"
        app:layout_constraintEnd_toStartOf="@+id/persija"
        app:layout_constraintStart_toEndOf="@+id/perseru"
        app:layout_constraintTop_toBottomOf="@+id/persebaya"
        app:srcCompat="@drawable/persib"
        android:contentDescription="@string/persib"
        android:onClick="persib"/>

    <ImageView
        android:id="@+id/persija"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toTopOf="@+id/psm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/persib"
        app:layout_constraintTop_toBottomOf="@+id/persela"
        app:srcCompat="@drawable/persija"
        android:contentDescription="@string/persija"
        android:onClick="persija"/>

    <ImageView
        android:id="@+id/persipura"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/persipura"
        app:layout_constraintBottom_toTopOf="@+id/pss"
        app:layout_constraintEnd_toStartOf="@+id/psis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/perseru"
        app:srcCompat="@drawable/persipura"
        android:onClick="persipura"/>

    <ImageView
        android:id="@+id/psis"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toTopOf="@+id/semen"
        app:layout_constraintEnd_toStartOf="@+id/psm"
        app:layout_constraintStart_toEndOf="@+id/persipura"
        app:layout_constraintTop_toBottomOf="@+id/persib"
        app:srcCompat="@drawable/psis"
        android:contentDescription="@string/psis"
        android:onClick="psis"/>

    <ImageView
        android:id="@+id/psm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toTopOf="@+id/tira"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/psis"
        app:layout_constraintTop_toBottomOf="@+id/persija"
        app:srcCompat="@drawable/psm"
        android:contentDescription="@string/psm"
        android:onClick="psm"/>

    <ImageView
        android:id="@+id/pss"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/pss"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/semen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/persipura"
        app:srcCompat="@drawable/pss"
        android:onClick="pss"/>

    <ImageView
        android:id="@+id/semen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tira"
        app:layout_constraintStart_toEndOf="@+id/pss"
        app:layout_constraintTop_toBottomOf="@+id/psis"
        app:srcCompat="@drawable/semen"
        android:contentDescription="@string/semen"
        android:onClick="semen"/>

    <ImageView
        android:id="@+id/tira"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/semen"
        app:layout_constraintTop_toBottomOf="@+id/psm"
        app:srcCompat="@drawable/tira"
        android:contentDescription="@string/tira"
        android:onClick="tira"/>

</android.support.constraint.ConstraintLayout>